# navi-sanitize

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  cliff.toml  codecov.yml  pyproject.toml  zensical.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: _build-reusable.yml  benchmark.yml  ci.yml  codeql.yml  docs.yml  fuzz.yml  grippy-review.yml  publish.yml  scorecard.yml  semgrep.yml
docs/: index.md
docs/explanation/: comparison.md  performance.md  pipeline-architecture.md  threat-model.md  why-this-matters.md
docs/getting-started/: quickstart.md
docs/how-to/: writing-custom-escapers.md
docs/plans/: 2026-03-02-whitepaper-pipeline-diagram-design.md
docs/reference/: api.md  changelog.md  character-reference.md
docs/stylesheets/: navi.css
docs/whitepaper/: navi-sanitize-whitepaper.tex
examples/: README.md  fastapi_pydantic.py  llm_pipeline.py  log_sanitizer.py
fuzz/: fuzz_clean.py
src/navi_sanitize/: __init__.py  _decode.py  _homoglyphs.py  _invisible.py  _pipeline.py  _scripts.py
src/navi_sanitize/escapers/: __init__.py  _jinja2.py  _path.py
tests/: conftest.py  test_adversarial.py  test_adversarial_homoglyphs.py  test_adversarial_invisible.py  test_audit_remediation.py  test_benchmark.py  test_bypass_attempts.py  test_clean.py  test_decode.py  test_escapers.py  test_garbage.py  test_invisible_coverage.py  test_properties.py  test_scripts.py  test_tag_block.py  test_walk.py
