[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/navi_sanitize"]

[project]
name = "navi-sanitize"
version = "0.1.0"
description = "Input sanitization pipeline for untrusted text. Deterministic. No ML. No false positives."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Project Navi LLC" }
]
maintainers = [
    { name = "Nelson Spence" }
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
