[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/navi_sanitize"]

[project]
name = "navi-sanitize"
version = "0.1.1"
description = "Input sanitization pipeline for untrusted text. Deterministic. No ML. No false positives."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Project Navi LLC" }
]
maintainers = [
    { name = "Nelson Spence" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Text Processing :: Filters",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/Project-Navi/navi-sanitize"
Issues = "https://github.com/Project-Navi/navi-sanitize/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
